--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ It’s your birthday my dear, make the best of it. I wish you the best of everyt
 <script>
   $(function(){
       $(".sentence1").typed({
-        strings: ["Hey Cutie💕💕💕 You believe it or not saumya but you are the most pure hearted person I have ever seen. Its your birthday today and on this Special Day we all want to tell you how much you mean to all of us. We have made a lot of friends in this 10 years period we have been together but we couldn't find anyone more true more cute and more mad than you.<BR> May This Birthday Brigns lots and lots of fun and enjoyement in your life.... May success bows to your feet and you get whatever you want.... ALways keep smiling like you are❤❤❤❤❤ "],
+        strings: ["Hey Cutie💕💕💕 You believe it or not saumya but you are the most pure hearted person I have ever seen. Its your birthday today and on this Special Day we all want to tell you how much you mean to all of us. We have made a lot of friends in this 10 years period we have been together but we couldn't find anyone more true more cute and more mad than you.<BR> May This Birthday Brigns lots and lots of fun and enjoyement in your life.... May success bows to your feet and you get whatever you want.... ALways keep smiling like you are❤❤❤❤❤ HAPPY BIRTHDAY JHALLI 💕💕 ALWAYS STAY MAD AND PURE LIKE THIS"],
         typeSpeed: 300,
         backSpeed: 100,
         cursorChar: "|",    
